<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".SIGNUP">
    <TextView
        android:layout_marginLeft="14dp"
        android:layout_width="345dp"
        android:text="USER REGISTRATION"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginTop="5dp"
        android:layout_height="50dp"/>
    <EditText
        android:layout_width="343dp"
        android:inputType="text"
        android:layout_gravity="center_horizontal"
        android:textSize="23sp"
        android:id="@+id/tname"
        android:hint="@string/your_name"
        android:textStyle="bold|italic"
        android:layout_marginTop="5dp"
        android:textColor="#098"
        android:layout_height="47dp"/>
    <EditText
        android:layout_width="343dp"
        android:inputType="text"
        android:layout_gravity="center_horizontal"
        android:textSize="23sp"
        android:id="@+id/tnumber"
        android:hint="@string/your_tsc_number"
        android:textStyle="bold|italic"
        android:layout_marginTop="5dp"
        android:textColor="#098"
        android:layout_height="47dp"/>
    <EditText
        android:layout_width="343dp"
        android:inputType="number"
        android:layout_gravity="center_horizontal"
        android:textSize="23sp"
        android:id="@+id/idnum"
        android:hint="@string/your_id_number"
        android:textStyle="bold|italic"
        android:layout_marginTop="5dp"
        android:textColor="#098"
        android:layout_height="47dp"/>
    <EditText
        android:layout_width="343dp"
        android:inputType="number"
        android:layout_gravity="center_horizontal"
        android:textSize="23sp"
        android:hint="@string/your_phone_number"
        android:textStyle="bold|italic"
        android:id="@+id/pno"
        android:layout_marginTop="5dp"
        android:textColor="#098"
        android:layout_height="47dp"/>
    <EditText
        android:layout_width="343dp"
        android:inputType="text"
        android:layout_gravity="center_horizontal"
        android:textSize="23sp"
        android:hint="@string/your_user_name"
        android:textStyle="bold|italic"
        android:id="@+id/uname"
        android:layout_marginTop="5dp"
        android:textColor="#098"
        android:layout_height="47dp"/>
    <EditText
        android:layout_width="343dp"
        android:inputType="text"
        android:layout_gravity="center_horizontal"
        android:textSize="23sp"
        android:id="@+id/pass"
        android:hint="@string/your_password"
        android:textStyle="bold|italic"
        android:layout_marginTop="5dp"
        android:textColor="#098"
        android:layout_height="47dp"/>
    <EditText
        android:layout_width="343dp"
        android:inputType="text"
        android:layout_gravity="center_horizontal"
        android:textSize="23sp"
        android:id="@+id/cpass"
        android:hint="CONFIRM PASSWORD"
        android:textStyle="bold|italic"
        android:layout_marginTop="5dp"
        android:textColor="#098"
        android:layout_height="47dp"/>
    <Button
        android:layout_width="wrap_content"
        android:id="@+id/register"
        android:layout_marginTop="5dp"
        android:text="SIGN UP"
        android:background="@color/colorPrimary"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/login"
        android:background="@color/colorAccent"
        android:text="IF ALREADY REGISTERED CLICK HERE TO LOG IN"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>

</LinearLayout>
</ScrollView>